llvm/test/MC/EraVM/asm-parser/data-errors.s
; RUN: not llvm-mc -triple eravm -o - < %s 2>&1 > %t.stdout | FileCheck %s
; RUN: FileCheck --check-prefix=STDOUT %s < %t.stdout

; STDOUT:     .text
; STDOUT:     .rodata
; STDOUT-NOT: {{.+}}

  .text
.wide_reloc_symbol0:
  .reference_symbol_cell  @"__linker_symbol_library:id"

.wide_reloc_symbol1:
  .reference_symbol_cell  @"__linker_symbol_library:id"

.wide_reloc_symbol2:
  .reference_symbol_cell  @"__factory_dependency_factory:library:id"

.wide_reloc_symbol3:
  .reference_symbol_cell  @"__factory_dependency_factory:library:id"

.wide_reloc_symbol4:
  .reference_symbol_cell  "no_at"

.wide_reloc_symbol5:
  .reference_symbol_cell  @1234

.wide_reloc_symbol6:
  .reference_symbol_cell  @__new_symbol_type_name

  .rodata
  .cell 1 2
  .cell 1, 2
  .cell x
  .cell 1 + 2
  .cell 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1



; COM: Autogenerated checks below, see README.md.
; CHECK: duplicating reference symbol
; CHECK: duplicating reference symbol
; CHECK: expected symbol name starting with @
; CHECK: expected symbol name
; CHECK: unexpected reference symbol name
; CHECK:       <stdin>:{{[0-9]+}}:11: error: expected newline
; CHECK-NEXT:    .cell 1 2
; CHECK-NEXT:            ^
; CHECK:       <stdin>:{{[0-9]+}}:10: error: expected newline
; CHECK-NEXT:    .cell 1, 2
; CHECK-NEXT:           ^
; CHECK:       <stdin>:{{[0-9]+}}:9: error: integer literal expected
; CHECK-NEXT:    .cell x
; CHECK-NEXT:          ^
; CHECK:       <stdin>:{{[0-9]+}}:11: error: expected newline
; CHECK-NEXT:    .cell 1 + 2
; CHECK-NEXT:            ^
; CHECK:       <stdin>:{{[0-9]+}}:9: error: integer too wide
; CHECK-NEXT:    .cell 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1
; CHECK-NEXT:          ^
